# advent-of-code

./: README.md
2024/: README.md
2024/day-01/: Cargo.toml
2024/day-01/src/: part1.rs  part2.rs
2024/day-02/: Cargo.toml
2024/day-02/src/: part1.rs  part2.rs
2024/day-03/: Cargo.toml
2024/day-03/src/: part1.rs  part2.rs
2024/day-04/: Cargo.toml
2024/day-04/src/: part1.rs  part2.rs
2024/day-05/: Cargo.toml
2024/day-05/src/: part1.rs  part2.rs
2024/day-06/: Cargo.toml
2024/day-06/src/: part1.rs  part2.rs
2024/day-07/: Cargo.toml
2024/day-07/src/: part1.rs  part2.rs
2024/day-08/: Cargo.toml
2024/day-08/src/: part1.rs  part2.rs
2024/day-09/: Cargo.toml
2024/day-09/src/: part1.rs  part2.rs
2024/day-10/: Cargo.toml
2024/day-10/src/: part1.rs  part2.rs
2024/day-11/: Cargo.toml
2024/day-11/src/: part1.rs  (+1 more)
2024/day-12/: Cargo.toml
2024/day-13/: Cargo.toml
2024/day-14/: Cargo.toml
2024/day-15/: Cargo.toml
2024/day-16/: Cargo.toml
2024/day-17/: Cargo.toml
2024/day-17/src/: part1.rs  part2.rs
2024/day-18/: Cargo.toml
2024/day-19/: Cargo.toml
2024/day-20/: Cargo.toml
2024/day-21/: Cargo.toml
2024/day-22/: Cargo.toml
2024/day-23/: Cargo.toml
2024/day-24/: Cargo.toml
2024/day-25/: Cargo.toml
2024/day-template/: Cargo.toml
2025/: README.md
2025/day-01/: Cargo.toml
2025/day-02/: Cargo.toml
2025/day-03/: Cargo.toml
2025/day-04/: Cargo.toml
2025/day-05/: Cargo.toml
2025/day-06/: Cargo.toml
2025/day-07/: Cargo.toml
2025/day-08/: Cargo.toml
2025/day-09/: Cargo.toml
2025/day-template/: Cargo.toml
(+45 files in other folders)
