[package]
name = "adventofcode-2024-day-17"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.13"
rustc-hash = "2.1"

[[bin]]
name = "part1"
path = "src/part1.rs"

[[bin]]
name = "part2"
path = "src/part2.rs"

[profile.release]
opt-level = 3
debug = false
codegen-units = 1
lto = true
